# me-shower

./: .gitignore  AGENTS.md  CHANGELOG.md  GOAL.md  PLAN.md  README.md
.codex/: config.toml
.codex/agents/application_tailor/: SKILLS.md
.codex/agents/career_architect/: SKILLS.md
.codex/rules/: workflow.rules
app/: pyproject.toml
app/data/raw_sources/: noisy_sample.txt  sample.txt
app/data/source_sync/: 2026-07-10.md
app/src/: ingestion_safety.py  main.py
app/templates/: resume.md.j2
app/tests/: test_execution_state_patch.py  test_ingestion_safety.py  test_render.py  test_repository_publish_run_registry.py  test_repository_publish_schema.py  test_repository_snapshot.py
app/tests/fixtures/: synthetic_ingestion_safety.md
data/: profile.yaml
data/projects/: sample_web_app_improvement.yaml
data/skills/: ai.yaml  backend.yaml  frontend.yaml  infrastructure.yaml
docs/: 00_vision.md  01_concepts.md  02_architecture.md  03_operating_model.md
docs/future-epics/: agent_runtime_supervisor.md
docs/ja/: 00_vision.md  01_concepts.md  02_architecture.md  03_operating_model.md  poc-sheet.md  xx.DIRECTION.md  xx.ROADMAP.md  ハーネス.md  ハーネス実装設計.md
docs/review-promotion/: career_knowledge_store.md  claim_builder.md  evidence_traceability.md  rejection_defer_reason.md  resume_regeneration_policy.md  review_queue.md  v0_4_0_concept.md  view_generation.md
docs/source-intelligence/: real_data_ingestion_safety_gate.md
src/: main.py
templates/: resume.css
templates/themes/: forest.css
ハーネス実装/: ExecuteInterface.md  PlanInterface.md  Skill構成.md
(+120 files in other folders)
